# quantum-genesis

./: .zenodo.json  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_GUIDE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
data/: ibm_quantum_t1_public.yaml  willow_2024_targets.yaml
src/diamond_setup/templates/: AGENT.md
src/quantum_genesis/: __init__.py  benchmark.py  cli.py  constants.py  crep_quantum.py  density_matrix.py  logical_depth.py  qec_threshold.py  qubit_model.py  stim_interface.py  system.py  topology_features.py  toric_code.py
tests/: test_cli.py  test_quantum_genesis.py
