[project]
name = "quantum-genesis"
version = "0.1.0"
description = "Package 24 — Qubit decoherence as UTAC threshold system (GenesisAeon Entropy Atlas)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Johann Römer / MOR Research Collective" }]
requires-python = ">=3.11"
keywords = [
    "quantum decoherence",
    "UTAC",
    "CREP",
    "surface code",
    "QEC threshold",
    "toric code",
    "criticality",
    "entropy atlas",
    "GenesisAeon",
    "superconducting qubits",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
sim = [
    "stim>=1.13.0",            # surface code Monte Carlo (optional)
    "qiskit-ibm-runtime>=0.20",  # IBM Quantum hardware access (optional)
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
quantum-genesis = "quantum_genesis.cli:app"

[project.urls]
Homepage = "https://github.com/GenesisAeon/quantum-genesis"
Repository = "https://github.com/GenesisAeon/quantum-genesis"
Issues = "https://github.com/GenesisAeon/quantum-genesis/issues"
Zenodo = "https://doi.org/10.5281/zenodo.19645351"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantum_genesis", "src/diamond_setup"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["quantum_genesis", "diamond_setup"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=quantum_genesis --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
